--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4798,7 +4798,7 @@
                                             class="bg-green-500 text-white px-6 py-2 rounded hover:bg-green-700 flex items-center justify-center shadow-md disabled:opacity-50"
                                             dir="ltr"
                                         >
-                                            ({{ formatMangaSize(manga.MangaFileSize) }}) {{ manga.MangaNumber }}
+                                            {{ manga.MangaNumber }} ({{ formatMangaSize(manga.MangaFileSize) }})
                                         </button>
                                         <img 
                                             v-if="manga.status === 'success'" 
