--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -357,6 +357,23 @@
 </head>
 <body class="bg-gray-800 p-4">
     <div id="app" class="container mx-auto p-4 shadow-lg rounded"> <!-- Removed .bg-slate-700 -->
+
+        <!-- Header Navigation Bar -->
+        <fieldset class="border border-gray-400 rounded p-2 mb-4">
+            <legend class="text-lg font-bold text-white px-2">النوافذ</legend>
+            <div class="flex justify-center gap-4">
+                <button class="bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">
+                    حلقات
+                </button>
+                <button class="bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-700">
+                    أفلام
+                </button>
+                <button class="bg-purple-500 text-white font-bold py-2 px-4 rounded hover:bg-purple-700">
+                    مانغا
+                </button>
+            </div>
+        </fieldset>
+
             <!-- Error Message with Retry Button -->
     <div v-if="error" class="text-center text-xl mb-4 text-red-500 font-bold py-4">
         <p class="mb-4">{{ error }}</p>
