--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -355,8 +355,8 @@
     }
 </style>
 </head>
-<body class="bg-gray-800 p-4">
-    <div id="app" class="container mx-auto p-4 shadow-lg rounded relative"> <!-- Removed .bg-slate-700 -->
+<body class="bg-gray-800 p-4 relative">
+    <div id="app" class="container mx-auto p-4 shadow-lg rounded"> <!-- Removed .bg-slate-700 -->
 
         <!-- Menu Button -->
         <div class="absolute top-4 right-4">
@@ -367,10 +367,10 @@
             </button>
             
             <!-- Dropdown Menu -->
-            <div v-if="menuOpen" class="absolute right-0 mt-2 bg-white shadow-lg rounded py-2 w-32">
-                <button class="block w-full text-left px-4 py-2 text-blue-500 hover:bg-gray-200">حلقات</button>
-                <button class="block w-full text-left px-4 py-2 text-green-500 hover:bg-gray-200">أفلام</button>
-                <button class="block w-full text-left px-4 py-2 text-purple-500 hover:bg-gray-200">مانغا</button>
+            <div v-if="menuOpen" class="absolute right-0 mt-2 bg-sky-900 shadow-lg rounded py-2 w-32">
+                <button class="block w-full text-left px-4 py-2 text-base font-bold text-white hover:bg-gray-200">حلقات</button>
+                <button class="block w-full text-left px-4 py-2 text-base font-bold text-white hover:bg-gray-200">أفلام</button>
+                <button class="block w-full text-left px-4 py-2 text-base font-bold text-white hover:bg-gray-200">مانغا</button>
             </div>
         </div>
 
