--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -368,9 +368,9 @@
             
             <!-- Dropdown Menu -->
             <div v-if="menuOpen" class="absolute right-0 mt-2 bg-sky-900 shadow-lg rounded py-2 w-32">
-                <button class="block w-full text-left px-4 py-2 text-base font-bold text-white hover:bg-gray-200">حلقات</button>
-                <button class="block w-full text-left px-4 py-2 text-base font-bold text-white hover:bg-gray-200">أفلام</button>
-                <button class="block w-full text-left px-4 py-2 text-base font-bold text-white hover:bg-gray-200">مانغا</button>
+                <button class="block w-full text-center px-4 py-2 text-base font-bold text-white hover:bg-teal-600">حلقات</button>
+                <button class="block w-full text-center px-4 py-2 text-base font-bold text-white hover:bg-teal-600">أفلام</button>
+                <button class="block w-full text-center px-4 py-2 text-base font-bold text-white hover:bg-teal-600">مانغا</button>
             </div>
         </div>
 
