--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -359,7 +359,7 @@
     <div id="app" class="container mx-auto p-4 shadow-lg rounded"> <!-- Removed .bg-slate-700 -->
 
         <!-- Menu Button -->
-        <div class="absolute top-4 right-4">
+        <div class="fixed top-4 right-4 z-50">
             <button @click="toggleMenu" class="bg-gray-700 text-white p-2 rounded flex flex-col items-center">
                 <span class="block w-6 h-1 bg-white mb-1"></span>
                 <span class="block w-6 h-1 bg-white mb-1"></span>
