--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4614,9 +4614,16 @@
             <div class="relative w-12 h-12 mx-auto">
                 <div class="w-full h-full animate-spin">
                     <svg class="w-full h-full" viewBox="0 0 100 100" style="transform: rotate(-90deg);">
-                        <circle class="stroke-blue-500" cx="50" cy="50" r="45" fill="none" stroke-width="8"
+                        <circle
+                            class="stroke-blue-500"
+                            cx="50"
+                            cy="50"
+                            r="45"
+                            fill="none"
+                            stroke-width="8"
                             :stroke-dasharray="circumference"
-                            :stroke-dashoffset="strokeDashOffset" />
+                            :stroke-dashoffset="strokeDashOffset"
+                        />
                     </svg>
                 </div>
                 <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-blue-500 font-bold text-sm">
@@ -5130,9 +5137,8 @@
                     episodeTypeFilter: 'All',
                     episodes: [],
                     loading: true,
-                    loadProgress: 0,
+                    loadProgress: 0, // Ensure this is defined here
                     circumference: 2 * Math.PI * 45, // 2πr where r=45
-                    progressInterval: null,
                     error: null,
                     searchQuery: '',
                     selectedFilter: 'all',
