--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -11993,117 +11993,102 @@
 
                 // Method to load data from JSON
                 loadData() {
-                    return new Promise((resolve, reject) => {
-                        // Reset progress and start the progress interval
-                        this.loadProgress = 0;
-                        if (this.progressInterval) clearInterval(this.progressInterval);
+                        return new Promise((resolve, reject) => {
+                            this.loadProgress = 0; // Reset progress
+                            if (this.userJoined) {
+                                // Reset states before attempting to fetch
+                                this.episodes = [];
+                                this.mangas = [];
+                                this.error = null;
+                                this.loading = true;
 
-                        if (this.userJoined) {
-                            // Reset states before attempting to fetch
-                            this.episodes = [];
-                            this.mangas = [];
-                            this.error = null;
-                            this.loading = true;
+                                // Check if a rate-limit countdown is stored
+                                const storedWaitTime = localStorage.getItem('waitTime');
+                                if (storedWaitTime) {
+                                    this.waitTime = parseInt(storedWaitTime, 10);
+                                    this.error = `لقد تجاوزت الحد المسموح به من الطلبات. يُرجى الانتظار ${this.waitTime} ثانية.`;
+                                    this.startTimer(); // Continue the countdown
+                                    reject('Rate limit exceeded');
+                                    return;
+                                }
 
-                            // Check if a rate-limit countdown is stored
-                            const storedWaitTime = localStorage.getItem('waitTime');
-                            if (storedWaitTime) {
-                                this.waitTime = parseInt(storedWaitTime, 10);
-                                this.error = `لقد تجاوزت الحد المسموح به من الطلبات. يُرجى الانتظار ${this.waitTime} ثانية.`;
-                                this.startTimer(); // Continue the countdown
-                                reject('Rate limit exceeded');
-                                return;
-                            }
+                                // Append a cache-busting query parameter
+                                const urlWithCacheBust = `${this.jsonUrl}?t=${new Date().getTime()}`;
 
-                            // Append a cache-busting query parameter
-                            const urlWithCacheBust = `${this.jsonUrl}?t=${new Date().getTime()}`;
-
-                            fetch(urlWithCacheBust, { cache: 'no-store' })
-                                .then(response => {
-                                    if (response.status === 429) {
-                                        // If rate-limited, parse the JSON response
-                                        return response.json().then(data => {
-                                            this.loading = false;
-
-                                            if (data.error === "User blocked") {
-                                                this.error = "لقد تجاوزت الحد المسموح به من الطلبات لهذا اليوم.";
-                                                reject('User blocked');
-                                                return;
-                                            }
-
-                                            const resetTime = data.resetTime || Date.now() + 60000;
-                                            this.waitTime = Math.max(0, Math.floor((resetTime - Date.now()) / 1000));
-                                            this.error = `لقد تجاوزت الحد المسموح به من الطلبات. يُرجى الانتظار ${this.waitTime} ثانية.`;
-                                            localStorage.setItem('waitTime', this.waitTime);
-                                            console.warn(data.message);
-
-                                            // Start a timer to update the wait time
-                                            this.startTimer();
-                                            reject('Rate limit exceeded');
-                                        });
-                                    }
-
-                                    if (!response.ok) {
-                                        throw new Error(`HTTP error! status: ${response.status}`);
-                                    }
-
-                                    // Get the total content length from the response headers
-                                    const contentLength = response.headers.get('Content-Length');
-                                    if (!contentLength) {
-                                        console.warn('Content-Length header missing. Progress tracking may not be accurate.');
-                                    }
-
-                                    let loadedBytes = 0;
-                                    const reader = response.body.getReader();
-                                    const chunks = [];
-
-                                    // Function to read the stream
-                                    const readStream = () => {
-                                        return reader.read().then(({ done, value }) => {
-                                            if (done) {
-                                                // Stream is complete
-                                                const data = new TextDecoder().decode(new Uint8Array(chunks.reduce((acc, chunk) => [...acc, ...chunk], [])));
-                                                const parsedData = JSON.parse(data);
-                                                this.episodes = parsedData.Episodes || [];
-                                                this.mangas = parsedData.Mangas || [];
+                                fetch(urlWithCacheBust, { cache: 'no-store' })
+                                    .then(response => {
+                                        if (response.status === 429) {
+                                            // Handle rate limit
+                                            return response.json().then(data => {
                                                 this.loading = false;
-                                                localStorage.removeItem('waitTime');
-                                                resolve();
-                                                return;
-                                            }
+                                                this.loadProgress = 0; // Reset progress
+                                                // Handle rate limit error
+                                            });
+                                        }
 
-                                            // Update loaded bytes and progress
-                                            loadedBytes += value.length;
-                                            chunks.push([...value]);
+                                        if (!response.ok) {
+                                            throw new Error(`HTTP error! status: ${response.status}`);
+                                        }
 
-                                            if (contentLength) {
-                                                this.loadProgress = Math.round((loadedBytes / contentLength) * 100);
-                                            }
+                                        // Get the total content length from the response headers
+                                        const contentLength = response.headers.get('Content-Length');
+                                        if (!contentLength) {
+                                            console.warn('Content-Length header missing. Progress tracking may not be accurate.');
+                                        }
 
-                                            // Continue reading the stream
-                                            return readStream();
-                                        });
-                                    };
+                                        let loadedBytes = 0;
+                                        const reader = response.body.getReader();
+                                        const chunks = [];
 
-                                    // Start reading the stream
-                                    return readStream();
-                                })
-                                .catch(error => {
-                                    this.loading = false;
-                                    this.loadProgress = 0;
+                                        // Function to read the stream
+                                        const readStream = () => {
+                                            return reader.read().then(({ done, value }) => {
+                                                if (done) {
+                                                    // Stream is complete
+                                                    const data = new TextDecoder().decode(new Uint8Array(chunks.reduce((acc, chunk) => [...acc, ...chunk], [])));
+                                                    const parsedData = JSON.parse(data);
+                                                    this.episodes = parsedData.Episodes || [];
+                                                    this.mangas = parsedData.Mangas || [];
+                                                    this.loading = false;
+                                                    this.loadProgress = 100; // Set progress to 100%
+                                                    localStorage.removeItem('waitTime');
+                                                    resolve();
+                                                    return;
+                                                }
 
-                                    if (!this.error) {
-                                        this.error = 'حدث خطأ أثناء محاولة تحميل البيانات. قد تكون هناك مشكلة مؤقتة في الاتصال أو الخادم. يُرجى التحقق من اتصالك بالإنترنت أو استخدام VPN والمحاولة مرة أخرى.';
-                                    }
-                                    reject(error);
-                                });
-                        } else {
-                            this.loading = false;
-                            this.loadProgress = 0;
-                            console.log("User not joined, not loading data.");
-                            reject('User not joined to the channel');
-                        }
-                    });
+                                                // Update loaded bytes and progress
+                                                loadedBytes += value.length;
+                                                chunks.push([...value]);
+
+                                                if (contentLength) {
+                                                    this.loadProgress = Math.round((loadedBytes / contentLength) * 100);
+                                                }
+
+                                                // Continue reading the stream
+                                                return readStream();
+                                            });
+                                        };
+
+                                        // Start reading the stream
+                                        return readStream();
+                                    })
+                                    .catch(error => {
+                                        this.loading = false;
+                                        this.loadProgress = 0; // Reset progress on error
+
+                                        if (!this.error) {
+                                            this.error = 'حدث خطأ أثناء محاولة تحميل البيانات. قد تكون هناك مشكلة مؤقتة في الاتصال أو الخادم. يُرجى التحقق من اتصالك بالإنترنت أو استخدام VPN والمحاولة مرة أخرى.';
+                                        }
+                                        reject(error);
+                                    });
+                            } else {
+                                this.loading = false;
+                                this.loadProgress = 0;
+                                console.log("User not joined, not loading data.");
+                                reject('User not joined to the channel');
+                            }
+                        });
+                    },
                 },
                 startTimer() {
                     if (this.waitTime > 0) {
